# HyscodeCLI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_log.txt  build_output.txt
.hyscode/: context.md
crates/hyscode-cli/: Cargo.toml
crates/hyscode-cli/src/: main.rs  oauth.rs
crates/hyscode-cli/src/commands/: agent.rs  chat.rs  commit.rs  completions.rs  config.rs  history.rs  init.rs  mod.rs  provider.rs  providers.rs  review.rs  undo.rs
crates/hyscode-config/: Cargo.toml
crates/hyscode-config/src/: env.rs  file.rs  keyring.rs  lib.rs  vault.rs
crates/hyscode-core/: Cargo.toml
crates/hyscode-core/src/: error.rs  lib.rs
crates/hyscode-core/src/models/: enums.rs  message.rs  mod.rs  provider.rs  request.rs  response.rs  tool.rs  usage.rs
crates/hyscode-core/src/traits/: mod.rs  provider.rs  tool.rs
crates/hyscode-engine/: Cargo.toml
crates/hyscode-engine/src/: agent.rs  audit.rs  context.rs  conversation.rs  lib.rs  permission.rs  summarize.rs  task.rs  token.rs
crates/hyscode-macros/: Cargo.toml
crates/hyscode-macros/src/: lib.rs
crates/hyscode-provider/: Cargo.toml
crates/hyscode-provider/src/: lib.rs  registry.rs
crates/hyscode-provider/src/adapters/: anthropic.rs  copilot.rs  gemini.rs  hyscode.rs  mod.rs  openai.rs  opencode_go.rs  openrouter.rs  zai.rs
crates/hyscode-provider/src/http/: client.rs  mod.rs  sse.rs
crates/hyscode-tools/: Cargo.toml
crates/hyscode-tools/src/: execute_command.rs  git_diff.rs  lib.rs  list_dir.rs  read_file.rs  registry.rs  search_code.rs  write_file.rs
crates/hyscode-ui/: Cargo.toml
crates/hyscode-ui/src/: lib.rs  markdown.rs  stream.rs
crates/hyscode-ui/src/tui/: app.rs  components.rs  events.rs  mod.rs  theme.rs  ui.rs
docs/adr/: ADR-001-provider-abstraction.md  ADR-002-cli-architecture.md  ADR-003-provider-service.md  ADR-004-local-storage-rag.md
docs/api/: provider-api.md
docs/architecture/: ARQUITETURA.md  FLUXOS.md  MODELOS_C4.md  MODELOS_DADOS.md
docs/provider-service/: ARQUITETURA_SERVICO.md
docs/requirements/: REQUISITOS.md
provider-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
provider-service/crates/hyscode-gateway/: Cargo.toml
provider-service/crates/hyscode-gateway/src/: admin.rs  anthropic.rs  apikeys.rs  auth.rs  billing.rs  config.rs  dashboard.rs  db.rs  error.rs  main.rs  models.rs  router.rs  upstream.rs  users.rs
provider-service/migrations/: 001_initial.sql  002_billing_admin.sql
