[workspace]
resolver = "2"
members = [
    "crates/hyscode-cli",
    "crates/hyscode-core",
    "crates/hyscode-engine",
    "crates/hyscode-provider",
    "crates/hyscode-tools",
    "crates/hyscode-ui",
    "crates/hyscode-config",
    "crates/hyscode-macros",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
authors       = ["Hyscode Team <dev@hyscode.dev>"]
license       = "LicenseRef-Proprietary"
repository    = "https://github.com/hyscode/hyscode-cli"
rust-version  = "1.78"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1.38", features = ["full"] }
tokio-stream   = { version = "0.1" }
async-trait    = "0.1"
futures        = "0.3"
pin-project    = "1"

# HTTP
reqwest        = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
hyper          = { version = "1", features = ["full"] }
url            = "2"

# Serialização
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"

# CLI
clap           = { version = "4", features = ["derive", "env", "color", "wrap_help"] }

# Terminal UI
ratatui        = "0.27"
crossterm      = "0.27"
console        = "0.15"
indicatif      = "0.17"
dialoguer      = "0.11"
syntect        = "5"
pulldown-cmark = "0.11"

# Banco de dados
sqlx           = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Erros
thiserror      = "1"
anyhow         = "1"
eyre           = "0.6"

# Logging e tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilitários
uuid           = { version = "1", features = ["v4", "serde"] }
ulid           = "1"
chrono         = { version = "0.4", features = ["serde"] }
bytes          = "1"
base64         = "0.22"
sha2           = "0.10"
hex            = "0.4"
once_cell      = "1"
dashmap        = "6"
parking_lot    = "0.12"
dirs           = "5"
which          = "6"

# Config e secrets
keyring        = "3"

# Git
git2           = { version = "0.19" }

# Testes
mockall        = "0.13"
wiremock       = "0.6"
tokio-test     = "0.4"
tempfile       = "3"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level     = 0
debug         = true

[profile.dev.package."*"]
opt-level     = 3  # Deps de terceiros otimizadas mesmo em dev
