[workspace]
resolver = "2"
members = ["crates/hyscode-gateway"]

[workspace.package]
version        = "0.1.0"
edition        = "2021"
authors        = ["HyscodeCLI Team"]
license        = "MIT"
repository     = "https://github.com/hyscode/hyscode"
rust-version   = "1.80"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }

# HTTP framework
axum         = { version = "0.7", features = ["macros"] }
axum-extra   = { version = "0.9", features = ["typed-header"] }
tower        = { version = "0.4", features = ["full"] }
tower-http   = { version = "0.5", features = ["cors", "trace", "request-id", "timeout"] }
hyper        = { version = "1" }

# Database
sqlx         = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Cache / PubSub
redis        = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
argon2       = "0.5"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Errors
anyhow       = "1"
thiserror    = "1"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Utilities
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
bytes        = "1"
once_cell    = "1"
dotenvy      = "0.15"
async-trait  = "0.1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "symbols"
