[package]
name        = "hyscode-config"
description = "Configurações, secrets e keyring do HyscodeCLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyscode-core = { path = "../hyscode-core" }

serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
keyring      = { workspace = true }
dirs         = { workspace = true }
once_cell    = { workspace = true }
aes-gcm-siv  = { workspace = true }
base64       = { workspace = true }
sha2         = { workspace = true }
rand         = { version = "0.8", features = ["getrandom"] }
