[package]
name        = "hyscode-core"
description = "Domínio, traits e tipos comuns do HyscodeCLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
bytes        = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
