[package]
name        = "hyscode-macros"
description = "Procedural macros internas do HyscodeCLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn    = { version = "2", features = ["full"] }
quote  = "1"
proc-macro2 = "1"
