[package]
name        = "hyscode-provider"
description = "Adapters para provedores de LLM"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default     = ["openai", "anthropic", "hyscode", "gemini"]
openai      = []
anthropic   = []
copilot     = []
openrouter  = []
zai         = []
hyscode     = ["openai"] # Hyscode usa schema OpenAI-compatible
gemini      = []
opencode-go = ["openai"] # OpenCode Go usa schema OpenAI-compatible

[dependencies]
hyscode-core = { path = "../hyscode-core" }

reqwest      = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
base64       = { workspace = true }
